# real-time-serving-platform

./: README.md  docker-compose.yml
api/: Dockerfile  pyproject.toml
api/api/: AggregatedRepository.py  SQLDatabase.py  SQLiteDatabase.py  main.py
consumer/: Dockerfile  pyproject.toml
consumer/consumer/: KafkaMessageConsumer.py  TeamsMonitoring.py  config.ini  main.py  webhooks.py
data/: db.sqlite
datafeed/: Dockerfile  pyproject.toml
datafeed/datafeed/: Feed.py  KafkaMessageProducer.py  MessageProducer.py  main.py
monitoring-server/: Dockerfile
prometheus/: prometheus.yml
